# ImageGoNord-Web

./: .all-contributorsrc  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  auto-publish.py  dev-requirements.txt  docker-compose.yml  publish-converted-image.sh  pyproject.toml  quantize-palette.py  requirements.txt  static.json
.github/: CODEOWNERS  FUNDING.yml  auto-publish-reddit.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: palette_request.md
.github/workflows/: auto-publish-reddit.yml  auto-publish-tweet.yml  ci.yml  git-guardian.yml  greetings.yml
ImageGoNord/palettes/Nord/: Aurora.txt  Frost.txt  PolarNight.txt  SnowStorm.txt
reddit-posts-automation/: Dockerfile  action.yml  auto-publish-multipalette.py  auto-publish.py  publish-converted-image.sh
src/: Dockerfile  VERSION  cli.py  docker-compose.yml  quantize-palette.py  replace-color.py  replace-color.py.bak
src/configs/: arguments.py  messages.py
src/ign-api/: Dockerfile  Procfile  conversion.py  convert_image.py  crontab  img_test.py  requirements.txt  run-worker.sh  run.py  run_test.py  worker.py  wsgi.py
src/ign-frontend/: .eslintrc.js  README.md  package-lock.json  package.json  vue.config.js
src/ign-pip/: MANIFEST.in  README.md  index.py  setup.py
src/ign-publisher/: Dockerfile  auto-publish.py  publish-converted-image.sh
src/palettes/: Frost.txt
src/utility/: artist.py  palette_loader.py  quantize.py  signal_manager.py  signaler.py
twitter-automation/: Dockerfile  action.yml  tweet-reddit-submission.sh  tweet-submission.js
(+114 files in other folders)
