[tool.poetry]
name = "ImageGoNord"
version = "0.1.0"
description = ""
authors = ["wabri <gabriele.puliti@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
image-go-nord = "^0.1.5"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
autopep8 = "^1.6.0"
twine = "^3.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
